attempting to fix style bug on IOS p3

--- a/src/style/sections/_resume.scss
+++ b/src/style/sections/_resume.scss
@@ -39,22 +39,20 @@
       display: flex;
       font-size: 5.6rem;
       font-weight: 700;
-      // margin-bottom: 3.2rem;
       text-align: left;
   
       @include respond(tab-land) {
-        font-size: 4rem;
+        font-size: 3.6rem;
       }
       @include respond(tab-port) {
-        font-size: 3.6rem;
+        font-size: 3.3rem;
         text-align: center;
       }
       @include respond(phone) {
-        font-size: 3.5rem;
-        line-height: 1.5;
+        font-size: 2rem;
       }
       @include respond(phone-xs) {
-        font-size: 2.8rem;
+        font-size: 2rem;
       }
     }
   
